fix readability of links in dark mode

--- a/assets/business.scss
+++ b/assets/business.scss
@@ -6,7 +6,7 @@
 
 	/* Base stuff */
 	a {
-		@apply text-blue-600 hover:underline;
+		@apply text-blue-600 dark:text-blue-400 hover:underline;
 	}
 
 	body {
